# Five_In_A_Row_Backend

./: .env.example  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
migrations/: 0001_init.sql
src/: api.rs  auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  protocol.rs  rooms.rs  ws.rs
tests/: rooms_flow.rs
